code reorg wip v2